# inframind-ai

./: .env.example  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  tsconfig.base.json  vercel.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy-lambda.yml  deploy-vercel.yml  terraform.yml
ai/: __init__.py
ai/formatting/: __init__.py  response_formatter.py
ai/models/: __init__.py  schemas.py
ai/orchestration/: __init__.py  orchestrator.py
ai/prompts/: __init__.py  infra_analysis.py  security_analysis.py  templates.py
ai/recommendation/: __init__.py  engine.py
ai/risk/: __init__.py  scoring.py
apps/api/: Dockerfile  package.json
apps/web/: .env.local.example  .eslintrc.cjs  Dockerfile  components.json  next.config.mjs  package.json  (+2 more)
backend/: .env.example  Dockerfile  requirements.txt
cli/: CHANGELOG.md  pyproject.toml
cli/src/infralint/: __init__.py  cli.py  config.py  detection.py  findings.py  heuristic.py  llm.py  sarif.py  scanner.py
cli/src/infralint.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cli/tests/: test_config.py  test_llm.py
docs/: AI_SETUP.md  ARCHITECTURE.md  CODING_STANDARDS.md
lambda/: package.json
samples/: Dockerfile.insecure  cloudformation-public-bucket.yaml  cloudformation-s3.yaml  cloudformation-vpc.json  github-actions-risky.yml  kubernetes-deployment.yaml  kubernetes-risky-demo.yaml  kubernetes-service.yml  main.tf  terraform-insecure-demo.tf
scripts/: package-lambda.sh
tests/: test_ai_modules.py
(+116 files in other folders)
