[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "infralint"
version = "0.1.0"
description = "Infrastructure linting CLI"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
openai = ["openai>=1.0"]
ollama = ["httpx>=0.25"]
dev = ["pytest>=8.0", "pytest-mock>=3.14", "ruff>=0.4"]

[project.scripts]
infralint = "infralint.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
